--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <hgroup>
             <div id="intro-text">
               <h1 id="intro" class="grey-not-black centered-text hide-tldr">
-                <b>*Lost in the AI Desert? We’ve Got Your Llama.</b>
+                <b>Lost in the AI Desert? We’ve Got Your Llama.</b>
                 The AI landscape can feel like a vast desert—endless potential, but without the right guidance, you’re just wandering under the sun, thirsty for results 💧. That’s where we come in. 🦙🏜️🚀
                 <!-- <a href="#" class="button">TLDR me</a> -->  
               </h1>
