--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <hr />
 
       <div id="contact">
-        <p class="centered-text">     I’m Richard O’Reilly, leading this AI consultancy. Let’s connect on how I can help make your organization more efficient with AI. Email me at <a href="mailtp:rorwashere@gmail.com" class="button">rorwashere@gmail.com</a>.</p>
+        <p class="centered-text">     I’m Richard O’Reilly, leading this AI consultancy. Let’s connect on how I can help make your organization more efficient with AI. Email me at <a href="mailto:rorwashere@gmail.com" class="button">rorwashere@gmail.com</a>.</p>
       </div>
 
     </div><!-- wrapper -->
